--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,13 +1,13 @@
 # must be unique in a given SonarQube instance
-sonar.projectKey=tpsonar
+sonar.projectKey=matrix
 # this is the name and version displayed in the SonarQube UI. Was mandatory prior to SonarQube 6.1.
-sonar.projectName=tpsonar
+sonar.projectName=matrix
 sonar.projectVersion=1.0
  
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 # This property is optional if sonar.modules is set. 
-sonar.sources=src
-sonar.java.binaries=out
+sonar.sources=src/main/java
+sonar.java.binaries=build/classes/java/main
 #sonar.java.test.binaries=bin/test/
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
